Modernization and rebuild
Rebuilding site to be a webapp
